# Huawei-Storage-Competition

./:  .gitignore  CMakeLists.txt  README.md  main.c  merge.py  merged_output.txt  metrics.txt  public.h
LKH2/: CMakeLists.txt  LKHInterface.c  LKHInterface.h  README.md  testLKH.c
LKH2/include/: Genetic.h  Heap.h  LKH.h  Sequence.h  gpx.h
LKH2/src/: AddExtraCandidates.c  AllocateStructures.c  BridgeGain.c  ChooseInitialTour.c  CreateCandidateSet.c  CreateQuadrantCandidateSet.c  Create_POPMUSIC_CandidateSet.c  FindTour.c  Gain23.c  Genetic.c  Heap.c  KSwapKick.c  LKH.c  LKHmain.c  LinKernighan.c  MergeWithTourCLARIST.c  MergeWithTourIPT.c  NormalizeNodeList.c  PrintParameters.c  ReadParameters.c  ReadProblem.c  WriteTour.c
LKH2_MIN/: LKHInterface.c  LKHInterface.h
LKH2_MIN/include/: LKH.h  MaxMatchingByHarryZHR.h  priorityQueue.h
LKH2_MIN/src/: AddExtraCandidates.c  Ascent.c  C.c  CandidateReport.c  ChooseInitialTour.c  CreateCandidateSet.c  Create_POPMUSIC_CandidateSet.c  Distance_SPECIAL.c  FindTour.c  FreeStructures.c  GetTime.c  LKH.c  LKHmain.c  LinKernighan.c  MergeTourWithBestTour.c  ReadCandidates.c  ReadEdges.c  ReadParameters.c  RecordBetterTour.c  SolveSubproblem.c  SolveTourSegmentSubproblems.c
LKH3/: CMakeLists.txt  LKHInterface.c  LKHInterface.h  README.md  testLKH.c
LKH3/include/: Genetic.h  LKH.h
LKH3/src/: Activate.c  BestSpecialOptMove.c  C.c  CTSP_InitialTour.c  CVRP_InitialTour.c  ChooseInitialTour.c  CreateCandidateSet.c  Create_POPMUSIC_CandidateSet.c  FindTour.c  FixedOrCommonCandidates.c  Gain23.c  Genetic.c  GetTime.c  IsPossibleCandidate.c  KSwapKick.c  LKH.c  LKHmain.c  LinKernighan.c  MTSP2TSP.c  MergeWithTourCLARIST.c  MergeWithTourGPX2.c  Penalty_CBTSP.c  Penalty_CBnTSP.c  Penalty_CTSP.c  Penalty_CTSP_D.c  Penalty_CVRP.c  Penalty_CluVRP.c  Penalty_PDPTW.c  Penalty_PTSP.c  Penalty_RCTVRP.c  Penalty_TRP.c  Penalty_TSPTW.c  Penalty_VRPB.c  Penalty_VRPBTW.c  PrintParameters.c  ReadParameters.c  ReadProblem.c  RecordBetterTour.c  SINTEF_WriteSolution.c  SolveSubproblem.c  (+4 more)
algorithm/: .algorithm.c.swj  .algorithm.c.swk  .algorithm.c.swl  .algorithm.c.swm  .algorithm.c.swn  .algorithm.c.swo  .algorithm.c.swp  algorithm.c  algorithm.h
algorithm/include/: Arr.h  MaxMatchingByHarryZHR.h  algorithm.h
algorithm/src/: GetBaseline.c  GetCost.c  GreedyInsert.c  LKH_GI.c  LKH_MM.c  LKH_NN.c  LKH_SS.c  MaxMatching_Greedy.c  MultiSortScan.c  NearestNeighbor.c  Scan.c  Sort.c  algorithm.c
submit/: README.md  main.c
submit/algorithm/: Arr.h  LKH.h  MaxMatchingByHarryZHR.h  algorithm.c  algorithm.h  gpx.h
submit/dataset/: case_1.txt  case_10.txt  case_45.txt  case_50.txt
submit/test/: metrics.txt  testbatch.py
test/: A-summary.txt  README.md  adjustParamInfo.txt  analysisSummary.py  compare.py  comparison_output.txt  dataset_generator.py  memoryUse.py  metrics.txt  param_adjust.py  score.py  score_file.txt  summaryAnalysisResult.xlsx  test.py  test_cases_with_seed1.txt  test_cases_with_seed2.txt  testbatch.py
test/dataset/: case_1.txt  case_10.txt  case_100.txt  case_101.txt  case_102.txt  case_103.txt  case_104.txt  case_105.txt  case_106.txt  case_107.txt  case_108.txt  case_109.txt  case_11.txt  case_110.txt  case_111.txt  case_112.txt  case_113.txt  case_114.txt  case_115.txt  case_116.txt  case_117.txt  case_118.txt  case_119.txt  case_12.txt  case_120.txt  case_121.txt  case_122.txt  case_123.txt  case_124.txt  case_125.txt  case_126.txt  case_127.txt  case_128.txt  case_129.txt  case_13.txt  case_130.txt  case_131.txt  case_132.txt  case_133.txt  case_134.txt  (+645 more)
test/dataset copy/: case_14.txt  case_18.txt  case_19.txt  case_21.txt  case_26.txt  case_34.txt  case_40.txt  case_44.txt  case_55.txt  case_56.txt  case_58.txt  case_59.txt  case_60.txt  case_65.txt  case_72.txt  case_79.txt  case_8.txt  case_80.txt  case_85.txt  case_88.txt  case_9.txt
test/dataset_10000/: case_1.txt  case_10.txt  case_100.txt  case_101.txt  case_102.txt  case_103.txt  (+196 more)
visual/: IOGraph.txt  README.md  log.txt  result.txt  visual.py  visual_convergence.py  visual_sequence.py
(+9990 files in other folders)
